<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FichaCliente">

    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/apellidos"
        />

    <EditText
        android:id="@+id/apellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apellidos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nombre"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/dni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/apellidos"
        android:layout_marginTop="20dp"/>

    <Spinner
        android:id="@+id/provincia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dni"
        android:layout_marginTop="20dp"
        />

    <CheckBox
        android:id="@+id/vip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/provincia"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/latitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/latitud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vip"

        />

    <EditText
        android:id="@+id/longitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/longitud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/latitud"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnMapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_en_el_mapa"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/longitud" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancelar"
        android:layout_marginLeft="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnGuardar" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:layout_marginRight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>